ajustes en idex

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque enim temporibus dignissimos repellat ullam distinctio pariatur incidunt laborum! Quibusdam voluptatum quia totam, magnam cupiditate cum eius quasi! Delectus, aspernatur nam.</p>
 </head>
 <body>
     
