--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
 
-    <h1>Cambio cambio</h1>
+    <h1>Hola Mundo con Github Pages</h1>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque enim temporibus dignissimos repellat ullam distinctio pariatur incidunt laborum! Quibusdam voluptatum quia totam, magnam cupiditate cum eius quasi! Delectus, aspernatur  nam.</p>
 
