--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <h1>Hola Mundo con Github Pages</h1>
+    <h1>Hola Mundo con Github Pages Editado</h1>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque enim temporibus dignissimos repellat ullam distinctio pariatur incidunt laborum! Quibusdam voluptatum quia totam, magnam cupiditate cum eius quasi! Delectus, aspernatur  nam.</p>
 
